2009-09-21  Marek Habersack  <mhabersack@novell.com>

	* mod_mono.8.in: documented MonoCheckHiddenFiles

2009-03-08  Marek Habersack  <mhabersack@novell.com>

	* mod_mono.8.in: added documentation for the new MonoIOMAP
	directive.

2009-01-28  Marek Habersack  <mhabersack@novell.com>

	* mod_mono.8.in: removed all the traces of Apache 1.3 support
