@@ -98,6 +98,12 @@ Default value: ""
 The full path to the mod-mono-server script.
 Default value: "/usr/bin/mod-mono-server"
 .TP
+.I "MonoTargetFramework"
+If MonoRunXSP is True, this option selects the .NET framework version to use. This
+affects the backend that is started to service the requests. The MonoServerPath option
+takes precedence over this setting. Available values are "2.0", "3.5" and "4.0". 
+Default value: "2.0"
+.TP
 .I "MonoWapiDir"
 The directory where mono runtime will create the ".wapi" directory
 used to emulate windows I/O. It's used to set MONO_SHARED_DIR.
