@@ -1,3 +1,7 @@
+2009-12-02  Marek Habersack  <mhabersack@novell.com>
+
+	* mod_mono.8.in: documented new directive MonoTargetFramework
+
 2009-09-21  Marek Habersack  <mhabersack@novell.com>
 
 	* mod_mono.8.in: documented MonoCheckHiddenFiles
